# PaperClock

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  build.sh
lib/bcm2835/: Makefile  config.status
lib/bcm2835/doc/: Makefile
lib/bcm2835/src/: Makefile
lib/bcm2835/src/.deps/: bcm2835.Po
pipelines/: paperclock.groovy
scripts/: build.sh  commands.gdb  debug.sh  format.sh  prerequisites.sh  run.sh
scripts/dockcross/: .gitignore  build.sh  crossbuild.sh
src/: Application.cpp  Application.h  Callback.h  ClockUI.cpp  ClockUI.h  Device.cpp  Device.h  HomeAssistantApi.cpp  HomeAssistantApi.h  LvglUI.cpp  LvglUI.h  Messages.h  Queue.cpp  Queue.h  RefCounted.h  ShutdownUI.cpp  ShutdownUI.h  Tasks.cpp  Tasks.h  TestClockUI.cpp  TestClockUI.h  fonts.h  includes.h  lv_conf.h  lv_font_mono_25.c  lv_font_sans_100_bold.c  lv_font_sans_28.c  lv_font_sans_28_bold.c  lv_font_sans_28_bold_italic.c  lv_font_sans_28_italic.c  lv_font_sans_34_bold.c  lv_font_sans_40_bold.c  lv_font_sans_50_bold.c  lv_font_symbols.c  lvgl_events.cpp  lvgl_events.h  main.cpp  mdi-icons.cpp  mdi-icons.h  result.h  (+3 more)
src/IT8951-ePaper/: DEV_Config.c  DEV_Config.h  Debug.h  EPD_IT8951.c  EPD_IT8951.h
support/: paperclock.service
tools/: generate-fonts.sh  generate-fonts.ts  generate-fonts.yaml  package-lock.json  package.json  pnpm-lock.yaml
tools/linux/: kitchen-display.service
